Fix li spacing issue and CartoDB style JS error

--- a/css/app.css
+++ b/css/app.css
@@ -212,12 +212,8 @@ iframe {
         white-space: nowrap;
         width: 100%;
       }
-      #layers li .details span.actions {
-        bottom: 18px;
-        display: block;
-        height: 20px;
-        position: absolute;
-        width: 201px;
+      #layers li .details div.actions {
+        height: 22px;
       }
 .dd-placeholder {
   -webkit-box-sizing: border-box;
